# side-projects

./: README.md
QQH2025-main/: README.md  problem_info.md  pyproject.toml  qqh-2025-env.yml
QQH2025-main/data/: games.csv
QQH2025-main/src/: environment.py  evaluate.py  model.py
idk, something fun/2048/: .gitignore  graphic.py  logic.py  main.py  move.py  requirements.txt
idk, something fun/API_tryout/: idk.py  main.py  requirements.txt
