[project]
name = "qqh2025"
version = "0.1.0"
description = "Qminers Quant Hackathon 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "xgboost-cpu==2.1.1",
  "scikit-learn==1.5.1",
  "scipy==1.12.0",
  "statsmodels==0.14.2",
  "torch==2.4.1",
  "torchaudio==2.4.1",
  "torchvision==0.19.1"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchaudio = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

